# rex

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  CONTRIBUTING.rst  Makefile  README.md  README.rst  citation.html  index.html  mkdocs.yml  objects.inv  old_ci.yml  pyproject.toml  pyproject_old.toml  requirements.txt  requirements_backup.txt  setup.cfg  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build_docs.yml  ci.yml  release.yml  run_tests.yml
api/: artificial.html  asynchronous.html  base.html  cem.html  compiled.html  delays.html  environment.html  evosax.html  gmm_estimator.html  node.html  ppo.html  record.html  transforms.html
docs/: .README.md  .citation.md  .htaccess  index.md  requirements.txt
docs/_static/: .README.md
docs/api/: artificial.md  asynchronous.md  base.md  cem.md  compiled.md  delays.md  environment.md  evosax.md  gmm_estimator.md  node.md  ppo.md  record.md  transforms.md
envs/: wrappers.py
envs/abstract/: nodes.py  systems.py
envs/crazyflie/: agent.py  cf2_brax.xml  cf2_inclined_lw.xml  env.py  estimator.py  inclined_landing.py  ode.py  path_following.py  pid.py  ppo.py  real.py  requirements.txt  supervisor.py  systems.py  tasks.py
envs/double_pendulum/: __init__.py  env.py  render.py
envs/pendulum/: __init__.py  base.py  brax.py  controller.py  detector.py  env.py  estimator.py  mlp.py  ode.py  ppo.py  real.py  realsense.py  render.py  requirements.txt  supervisor.py  systems.py  tasks.py  ukf.py  world_ode.py
envs/supergraph/: __init__.py
envs/vx300s/: __init__.py  cem_brax.py  env.py  requirements.txt
estimator/: __init__.py  callback.py  env.py
examples/: graph_and_environment_creation.html  graph_and_environment_creation.ipynb  node_definitions.html  node_definitions.ipynb  sim2real.html  sim2real.ipynb
experiments/: __init__.py  dill_dataclasses.py  exp_manager.py  get_record.py  hyperparams_opt.py  open_dill.py  requirements.txt  script_dill.py  train.py  train_clean.py  train_sim_eval_real.py
experiments/hyperparams/: ppo.yml  sac.yml  tqc.yml
gaussian_mixture/: __init__.py
jumpy/: __init__.py  _base_fns.py  core.py  lax.py
jumpy/numpy/: __init__.py  _types.py
notebooks/: brax.ipynb  compiler.ipynb  double_pendulum.ipynb  graph_and_environment_creation.ipynb  node_definitions.ipynb  pendulum.ipynb  pendulum_render.html  protocol.ipynb  sim2real.ipynb  vx300s.ipynb  vx300s_render.html
old_tests/: test_delay_sysid.py  test_distributions.py  test_gmm.py  test_import.py  test_node_api.py  test_spaces.py  test_tracer.py  test_wallclock.py  test_wrappers.py
paper/: __init__.py  evaluate.py  evaluate_sweep.yaml  plot_computation_graphs.py  record.py  sac.yaml  sweep.bash  sweep.py  sweep.yaml  train_sweep.yaml  vx300s.py  vx300s_plot.py  vx300s_prepare_supergraph_eval.py
proto/: log.proto
rex/: __init__.py  actor_critic.py  agent.py  artificial.py  asynchronous.py  base.py  cem.py  compiled.py  compiled_new.py  compiler.py  compiler_v2.py  constants.py  distributions.py  env.py  evo.py  gmm_estimator.py  graph.py  input.py  jax_utils.py  jumpy.py  mcs.py  mock.py  multiprocessing.py  node.py  open_colors.py  output.py  partition_runner.py  plot.py  ppo.py  record_utils.py  rl.py  spaces.py  supergraph.py  tracer.py  tracer_new.py  utils.py  wrappers.py
rex/pendulum/: actuator.py  agent.py  brax.py  ode.py  render.py  rl.py  sensor.py
rex/proto/: log_pb2.py
rex/sysid/: base.py  cem.py  evo.py  transform.py
rexv2/: __init__.py  artificial.py  asynchronous.py  base.py  cem.py  constants.py  evo.py  gmm_estimator.py  graph.py  node.py  partition_runner.py  ppo.py  rl.py  utils.py
rexv2/pendulum/: __init__.py  nodes.py  rl.py
scratch/: main_refactor.py  scratch_CMA_ES.py  scratch_art.py  scratch_async.py  scratch_bug.py  scratch_bug_in_frame.py  scratch_cache.py  scratch_compiled.py  scratch_delay_interp.py  scratch_device_bug.py  scratch_device_bug_v2.py  scratch_inplace.py  scratch_jax_utils.py  scratch_pallas.py  scratch_pnp.py  scratch_render_bug.py  scratch_share.py  scratch_sim2real.py
scratch/abstract/: main.py  main_eval.py
scratch/crazyflie/: main_delay_estimation.py  main_real.py  main_real_eval.py  main_real_inclined.py  main_rl.py  main_rl_eval.py  main_rl_eval_sim.py  main_rl_eval_speed.py  main_rl_inclined.py  main_sysid.py
scratch/pendulum/: MUJOCO_LOG.TXT  main_eval.py  (+18 more)
scripts/: async.py  box_pushing.html  brax_render.html  brax_render.py  compile.py  compile_script.py  compiled_old.py  compiled_old_v2.py  data_pre.pkl  delay.py  dummy.py  dummy_plot.py  mcs.py  mjx_vx300s.py  record_1.pb  rex_render.html  scratch.py  scratch_async_bug.py  scratch_brax.py  scratch_brax_vmap.py  scratch_bug_rexcemplanner.py  scratch_cache_gpu_jax.py  scratch_compare_dists.py  scratch_dp_estimator.py  scratch_dp_estimator_refactor.py  scratch_dp_evaluate.py  scratch_global_plan.py  scratch_grandiso.py  scratch_is_jitted.py  scratch_mcs.py  scratch_networkx.py  scratch_replace.py  scratch_supergraph.py  scratch_sysid.py  scratch_vx300s_record.py  script_async.py  script_compile_compare.py  script_compile_depth.py  script_compiler.py  script_delays.py  (+15 more)
search/: search_index.json
sysid/: __init__.py  cem.py  lsq.py  pendulum.py  sysid_pendulum.py  sysid_vx300s.py  utils.py  vx300s.py
tests/: dummy.py  test_compiler.py  test_distributions.py  test_gmm.py  test_import.py  test_jumpy.py  test_multiprocessing.py  test_node_api.py  test_plot.py  test_recording.py  test_spaces.py  test_tracer.py  test_wallclock.py  test_wrappers.py
(+66 files in other folders)
