[tool.poetry]
name = "rex"
version = "0.0.1"
license = "Apache2.0"
description = "Rex is a tool for creating Robotic Environments with jaX."
authors = ["Bas van der Heijden <d.s.vanderheijden@tudelft.nl>"]
homepage = "https://github.com/bheijden/rex"
repository = "https://github.com/bheijden/rex"
documentation = "https://github.com/bheijden/rex"
include = ["scripts"]

[tool.poetry.dependencies]
python = "^3.6.2"
seaborn = "^0.12.0"
protobuf = "^3.19.6"
jax = "^0.3.23"
flax = "^0.6.1"
tensorflow-probability = "^0.18.0"
networkx = "^2.8.8"
brax-jumpy = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0"
pytest-cov = "^3.0.0"
flake8 = ">=3"
flake8-bugbear = "^22.3.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "rex/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
