[tool.poetry]
name = "rex-lib"
version = "0.0.1"
license = "Apache2.0"
description = "Rex is a tool for creating Robotic Environments with jaX."
authors = ["Bas van der Heijden <d.s.vanderheijden@tudelft.nl>"]
homepage = "https://github.com/bheijden/rex"
repository = "https://github.com/bheijden/rex"
documentation = "https://github.com/bheijden/rex"
packages = [
    { include = "rex" },
]

[tool.poetry.dependencies]
python = "^3.9.0"
supergraph = "^0.0.6"
gymnasium = "^0.28.1"
protobuf = "^3.20"
flax = "^0.6.3"
tensorflow-probability = "^0.20.1"
termcolor = "^2.1.1"
networkx = "^3.1"
# CUDA 11.4 and CuDNN 8.2. This wheel is deprecated and will be discontinued with jax 0.4.8.
# CUDA >11.4 needed for jax version above 0.4.16.
# poetry run pip install --upgrade "jax[cuda11_pip]==0.4.16" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html  # todo: this is the one that works
jax = "^0.4.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
dill = "^0.3.6"
tqdm = "^4.64.1"

# Needed for brax
#mujoco
#absl-py = "^1.4.0"  # brax
#trimesh = "^3.18.3"  # brax

#sb3-contrib = "^1.7.0"
#huggingface-sb3 = "^2.2.4"
#rich = "^13.3.1"
#optuna = "^3.1.0"
#plotly = "^5.13.0"
#jupyterlab = "^3.6.1"
#ipywidgets = "^8.0.4"
#PyYAML = "^6.0"
#pytablewriter = "^0.64.2"
#rospkg = "^1.4.0"
#rl-zoo3 = "^1.7.0"
#torch = "^1.13.1"
#torchvision = "^0.14.1"
#torchaudio = "^0.13.1"
jupyter = "^1.0.0"


[tool.poetry.dev-dependencies]
black = "^23.3.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
flake8 = ">=3"
flake8-bugbear = "^23.6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "rex/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
