[project]
name = "rex-lib"
version = "0.0.8"
description = "Robotic Environments with jaX (REX)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Bas van der Heijden", email = "b.heijden@hotmail.com" }
]
homepage = "https://github.com/bheijden/rex"
repository = "https://github.com/bheijden/rex"
keywords = ["robotics", "jax", "simulation", "sim2real", "reinforcement-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    "supergraph>=0.0.8",
    "gymnasium>=0.29.1",  # todo: remove?
    "tqdm>=4.66.4",
    "dill>=0.3.8",
    "seaborn>=0.13.2",  # todo: move to optional
    "matplotlib>=3.7.0",
    "networkx>=3.2.1",
    "termcolor>=2.4.0",  # todo: remove?
    "jax>=0.4.30",  # Without CUDA by default
    "equinox>=0.11.4",
    "evosax>=0.1.6",  # Required for evo.py
    "optax>=0.2.3",  # Required for ppo.py
    "flax>=0.8.5",
    "distrax>=0.1.5"
]

[project.optional-dependencies]
# todo: add notebook dependencies: jupyter, ipywidgets.
examples = ["brax>=0.10.5"]  # Required for pendulum.py

[dependency-groups]
dev = [
    "ruff>=0.8.1",
]
tests = [
    "pytest-cov>=6.0.0",
    # Make sure that all test dependencies are also included in the testscript in .github/workflows/release.yml
    "pytest>=8.3.3",
]

#[project.scripts]
#rex-cli = "rex.cli:main"  # Optional: if you want to provide a command-line tool

[tool.coverage.run]
branch = false
source = ["rex"]
omit = ["rex/pendulum/*"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "pass",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    'if __name__ == "__main__":',
    "raise ",
    "except ImportError",
]

[tool.ruff]
#extend-include = ["*.ipynb"]
include = ["rex/**/*.py", "tests/**/*.py"]
line-length = 127
indent-width = 4

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["rex/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["rex"]

[tool.uv]
package = true
default-groups = ["dev"]  # Only "dev" is the default setting


